VariationHandling/JES_files/2016_preVFP/Histo_1000_TTToSemiLeptonic_boostedShiftedSrc3Down.err
[8MB/2.258GB][  0%][>                                                 ][4MB/s]  [32MB/2.258GB][  1%][>                                                 ][10.67MB/s]  [80MB/2.258GB][  3%][=>                                                ][20MB/s]  [136MB/2.258GB][  5%][==>                                               ][27.2MB/s]  [200MB/2.258GB][  8%][====>                                             ][33.33MB/s]  [248MB/2.258GB][ 10%][=====>                                            ][35.43MB/s]  [288MB/2.258GB][ 12%][======>                                           ][36MB/s]  [328MB/2.258GB][ 14%][=======>                                          ][36.44MB/s]  [368MB/2.258GB][ 15%][=======>                                          ][36.8MB/s]  [400MB/2.258GB][ 17%][========>                                         ][36.36MB/s]  [432MB/2.258GB][ 18%][=========>                                        ][36MB/s]  [464MB/2.258GB][ 20%][==========>                                       ][35.69MB/s]  [496MB/2.258GB][ 21%][==========>                                       ][35.43MB/s]  [528MB/2.258GB][ 22%][===========>                                      ][35.2MB/s]  [560MB/2.258GB][ 24%][============>                                     ][35MB/s]  [592MB/2.258GB][ 25%][============>                                     ][34.82MB/s]  [608MB/2.258GB][ 26%][=============>                                    ][33.78MB/s]  [632MB/2.258GB][ 27%][=============>                                    ][33.26MB/s]  [648MB/2.258GB][ 28%][==============>                                   ][32.4MB/s]  [672MB/2.258GB][ 29%][==============>                                   ][32MB/s]  [688MB/2.258GB][ 29%][==============>                                   ][31.27MB/s]  [712MB/2.258GB][ 30%][===============>                                  ][30.96MB/s]  [736MB/2.258GB][ 31%][===============>                                  ][30.67MB/s]  [752MB/2.258GB][ 32%][================>                                 ][30.08MB/s]  [776MB/2.258GB][ 33%][================>                                 ][29.85MB/s]  [792MB/2.258GB][ 34%][=================>                                ][29.33MB/s]  [816MB/2.258GB][ 35%][=================>                                ][29.14MB/s]  [832MB/2.258GB][ 35%][=================>                                ][28.69MB/s]  [856MB/2.258GB][ 37%][==================>                               ][28.53MB/s]  [872MB/2.258GB][ 37%][==================>                               ][28.13MB/s]  [896MB/2.258GB][ 38%][===================>                              ][28MB/s]  [928MB/2.258GB][ 40%][====================>                             ][28.12MB/s]  [952MB/2.258GB][ 41%][====================>                             ][28MB/s]  [984MB/2.258GB][ 42%][=====================>                            ][28.11MB/s]  [1016MB/2.258GB][ 43%][=====================>                            ][28.22MB/s]  [1.023GB/2.258GB][ 45%][======================>                           ][28.32MB/s]  [1.055GB/2.258GB][ 46%][=======================>                          ][28.42MB/s]  [1.078GB/2.258GB][ 47%][=======================>                          ][28.31MB/s]  [1.109GB/2.258GB][ 49%][========================>                         ][28.4MB/s]  [1.141GB/2.258GB][ 50%][=========================>                        ][28.49MB/s]  [1.172GB/2.258GB][ 51%][=========================>                        ][28.57MB/s]  [1.203GB/2.258GB][ 53%][==========================>                       ][28.65MB/s]  [1.234GB/2.258GB][ 54%][===========================>                      ][28.73MB/s]  [1.258GB/2.258GB][ 55%][===========================>                      ][28.62MB/s]  [1.281GB/2.258GB][ 56%][============================>                     ][28.52MB/s]  [1.297GB/2.258GB][ 57%][============================>                     ][28.26MB/s]  [1.32GB/2.258GB][ 58%][=============================>                    ][28.17MB/s]  [1.336GB/2.258GB][ 59%][=============================>                    ][27.92MB/s]  [1.359GB/2.258GB][ 60%][==============================>                   ][27.84MB/s]  [1.383GB/2.258GB][ 61%][==============================>                   ][27.76MB/s]  [1.398GB/2.258GB][ 61%][==============================>                   ][27.54MB/s]  [1.422GB/2.258GB][ 62%][===============================>                  ][27.47MB/s]  [1.445GB/2.258GB][ 64%][================================>                 ][27.41MB/s]  [1.469GB/2.258GB][ 65%][================================>                 ][27.35MB/s]  [1.484GB/2.258GB][ 65%][================================>                 ][27.14MB/s]  [1.508GB/2.258GB][ 66%][=================================>                ][27.09MB/s]  [1.531GB/2.258GB][ 67%][=================================>                ][27.03MB/s]  [1.555GB/2.258GB][ 68%][==================================>               ][26.98MB/s]  [1.578GB/2.258GB][ 69%][==================================>               ][26.93MB/s]  [1.609GB/2.258GB][ 71%][===================================>              ][27.02MB/s]  [1.633GB/2.258GB][ 72%][====================================>             ][26.97MB/s]  [1.664GB/2.258GB][ 73%][====================================>             ][27.05MB/s]  [1.695GB/2.258GB][ 75%][=====================================>            ][27.12MB/s]  [1.711GB/2.258GB][ 75%][=====================================>            ][26.95MB/s]  [1.734GB/2.258GB][ 76%][======================================>           ][26.91MB/s]  [1.758GB/2.258GB][ 77%][======================================>           ][26.87MB/s]  [1.781GB/2.258GB][ 78%][=======================================>          ][26.82MB/s]  [1.797GB/2.258GB][ 79%][=======================================>          ][26.67MB/s]  [1.82GB/2.258GB][ 80%][========================================>         ][26.63MB/s]  [1.836GB/2.258GB][ 81%][========================================>         ][26.48MB/s]  [1.859GB/2.258GB][ 82%][=========================================>        ][26.44MB/s]  [1.875GB/2.258GB][ 83%][=========================================>        ][26.3MB/s]  [1.891GB/2.258GB][ 83%][=========================================>        ][26.16MB/s]  [1.914GB/2.258GB][ 84%][==========================================>       ][26.13MB/s]  [1.93GB/2.258GB][ 85%][==========================================>       ][26MB/s]  [1.945GB/2.258GB][ 86%][===========================================>      ][25.87MB/s]  [1.969GB/2.258GB][ 87%][===========================================>      ][25.85MB/s]  [1.984GB/2.258GB][ 87%][===========================================>      ][25.72MB/s]  [2.008GB/2.258GB][ 88%][============================================>     ][25.7MB/s]  [2.031GB/2.258GB][ 89%][============================================>     ][25.68MB/s]  [2.055GB/2.258GB][ 90%][=============================================>    ][25.66MB/s]  [2.078GB/2.258GB][ 92%][==============================================>   ][25.64MB/s]  [2.109GB/2.258GB][ 93%][==============================================>   ][25.71MB/s]  [2.141GB/2.258GB][ 94%][===============================================>  ][25.79MB/s]  [2.172GB/2.258GB][ 96%][================================================> ][25.86MB/s]  [2.211GB/2.258GB][ 97%][================================================> ][26.02MB/s]  [2.25GB/2.258GB][ 99%][=================================================>][26.18MB/s]  [2.258GB/2.258GB][100%][==================================================][26.28MB/s]  [2.258GB/2.258GB][100%][==================================================][26.28MB/s]  
In file included from input_line_8:1:
/pool/condor/dir_234810/FillHistograms_Extended_JES.C:244:70: warning: 'if' initialization statements are a C++17 extension [-Wc++17-extensions]
    if(recoCuts && revertBtag && tTaggerCut && (*bit)[triggerFloatCR];)
                                                                     ^
/pool/condor/dir_234810/FillHistograms_Extended_JES.C:244:71: error: expected expression
    if(recoCuts && revertBtag && tTaggerCut && (*bit)[triggerFloatCR];)
                                                                      ^
